Update player character colors to natural color scheme
Replace black and white player colors with more natural, game-like colors:
- Default player: light blue with dark blue outline (heroic tunic)
- Player king: tan with brown outline (regal earth tones)
- Player pyromaniac: orange with saddle brown outline (fire-themed)

--- a/subsystems/mvp/static/index.html
+++ b/subsystems/mvp/static/index.html
@@ -759,9 +759,9 @@
         // Game Graphics Definitions
         const GRAPHICS = {
             // Character variants
-            player: createGraphic(['player'], '#e0e0e0', '#111'),
-            playerKing: createGraphic(['player-king'], '#e0e0e0', '#111'),
-            playerPyromaniac: createGraphic(['player-pyromaniac'], '#e0e0e0', '#111'),
+            player: createGraphic(['player'], '#6ba3d4', '#2d5a8d'),  // light blue / dark blue
+            playerKing: createGraphic(['player-king'], '#d4a574', '#8b6f47'),  // tan / brown
+            playerPyromaniac: createGraphic(['player-pyromaniac'], '#ff8c42', '#8b4513'),  // orange / saddle brown
             
             // Objects
             tree: createGraphic(['pine-tree'], '#51cf66', '#1a5f1a'),
