--- a/subsystems/mvp/static/index.html
+++ b/subsystems/mvp/static/index.html
@@ -759,7 +759,7 @@
         // Game Graphics Definitions
         const GRAPHICS = {
             // Character variants
-            player: createGraphic(['player'], '#6ba3d4', '#2d5a8d'),  // light blue / dark blue
+            player: createGraphic(['player'], '#e4b574', '#4b3f27'),  // tan / brown
             playerKing: createGraphic(['player-king'], '#d4a574', '#8b6f47'),  // tan / brown
             playerPyromaniac: createGraphic(['player-pyromaniac'], '#ff8c42', '#8b4513'),  // orange / saddle brown
             
