Simplify command list UI and restore 'i' inventory alias
Updated the web interface command list sidebar to be more concise and
added crafting commands. Restored 'i' as inventory command alias.

Frontend UI changes (static/index.html):
- Replaced individual U/D/L/R lines with single "Arrow Keys" line
- Added crafting commands: EQUIP, CRAFT/C, PICKUP, RECIPES, STATUS
- More informative command list for new players

Backend changes:
- Restored 'i' as inventory command alias (works when typed as command)
- Updated help text to show "Arrow Keys - Move around" instead of listing U/D/L/R
- Updated test to check for "Arrow Keys" instead of "U, D, L, R"

Note: 'i' works as typed command but not as keyboard shortcut,
preventing interference with typing words containing 'i'.

All tests pass (42 unit tests, 12 e2e tests).

--- a/subsystems/mvp/static/index.html
+++ b/subsystems/mvp/static/index.html
@@ -819,13 +819,15 @@
         <div class="help-section" id="help-section">
             <h3>Commands</h3>
             <div id="help-content">
-                <p><code>U</code> / <code>↑</code> - Move Up</p>
-                <p><code>D</code> / <code>↓</code> - Move Down</p>
-                <p><code>L</code> / <code>←</code> - Move Left</p>
-                <p><code>R</code> / <code>→</code> - Move Right</p>
+                <p><code>Arrow Keys</code> or <code>U/D/L/R</code> - Move</p>
                 <p><code>E</code> / <code>ENTER</code> - Enter/Exit/Flee (context-dependent)</p>
-                <p><code>C</code> - Cycle character appearance</p>
-                <p><code>H</code> - Help</p>
+                <p><code>EQUIP &lt;index&gt;</code> - Equip item from inventory</p>
+                <p><code>CRAFT &lt;recipe&gt;</code> or <code>C &lt;recipe&gt;</code> - Craft item</p>
+                <p><code>PICKUP</code> / <code>P</code> - Pick up item</p>
+                <p><code>INV</code> / <code>I</code> or <code>`</code> - Show inventory</p>
+                <p><code>RECIPES</code> - List available recipes</p>
+                <p><code>STATUS</code> - Show character status</p>
+                <p><code>H</code> - Help (context-aware)</p>
             </div>
         </div>
     </div>
