Frontend: Update to new movement command syntax
Updated frontend to use new unified movement command syntax (m u/d/l/r):
- Arrow keys now send "m u", "m d", "m l", "m r" instead of "u", "d", "l", "r"
- Updated all help text to show "M <dir>" instead of "U/D/L/R"
- Updated command placeholders for better clarity
- Updated frontend_todo.md: marked movement syntax update as complete

This aligns with the backend consolidation where all movement commands
use the unified "m <direction>" format. User experience is unchanged -
arrow keys still move the character as expected.

--- a/subsystems/mvp/static/index.html
+++ b/subsystems/mvp/static/index.html
@@ -52,7 +52,7 @@
                 type="text" 
                 class="command-input" 
                 id="command-input" 
-                placeholder="Enter command (U/D/L/R/X/HELP)"
+                placeholder="Enter command (M <dir>/X/HELP)"
                 autocomplete="off"
             />
             <button class="command-button" id="command-button">Execute</button>
@@ -85,7 +85,7 @@
         <div class="help-section" id="help-section">
             <h3>Commands</h3>
             <div id="help-content">
-                <p><code>Arrow Keys</code> or <code>U/D/L/R</code> - Move</p>
+                <p><code>Arrow Keys</code> or <code>M &lt;dir&gt;</code> - Move (m u, m d, m l, m r)</p>
                 <p><code>X</code> / <code>ENTER</code> / <code>EXIT</code> - Enter/Exit/Flee (context-dependent)</p>
                 <p><code>E</code> / <code>EQUIP</code> - Open equip selector (or 'e &lt;index&gt;' for direct equip)</p>
                 <p><code>CRAFT &lt;recipe&gt;</code> or <code>C &lt;recipe&gt;</code> - Craft item</p>
