Frontend: Add interactive crafting selector UI
Created visual crafting interface similar to equip selector:
- Type 'C' or 'CRAFT' to open craft selector
- Fetches craftable recipes using 'can' command
- Shows visual grid of available recipes with selection
- Navigate with arrow keys (grid: 5 per row) or number keys 0-9
- Press Enter to craft selected recipe
- Press Escape/backtick to cancel

Implementation:
- Added craft-select overlay state (craftSelectIndex, craftableRecipes)
- Added parseCraftableRecipes() to parse "can" command output
- Added fetchCraftableRecipes() to query backend for craftable recipes
- Added renderCraftSelectOverlay() for visual display
- Added grid navigation in keydown handler (same as equip selector)
- Updated help text to show 'C - Open craft selector'

Makes crafting usable on web frontend - no more typing long recipe IDs!

--- a/subsystems/mvp/static/index.html
+++ b/subsystems/mvp/static/index.html
@@ -87,8 +87,8 @@
             <div id="help-content">
                 <p><code>Arrow Keys</code> or <code>M &lt;dir&gt;</code> - Move (m u, m d, m l, m r)</p>
                 <p><code>X</code> / <code>ENTER</code> / <code>EXIT</code> - Enter/Exit/Flee (context-dependent)</p>
-                <p><code>E</code> / <code>EQUIP</code> - Open equip selector (or 'e &lt;index&gt;' for direct equip)</p>
-                <p><code>CRAFT &lt;recipe&gt;</code> or <code>C &lt;recipe&gt;</code> - Craft item</p>
+                <p><code>E</code> - Open equip selector (or 'e &lt;index&gt;' for direct equip)</p>
+                <p><code>C</code> - Open craft selector (or 'craft &lt;recipe&gt;' for direct craft)</p>
                 <p><code>PICKUP</code> / <code>P</code> - Pick up item</p>
                 <p><code>`</code> - Toggle inventory (web only)</p>
                 <p><code>RECIPES</code> - List available recipes</p>
