Add defense, accuracy, and evasion combat stats
Implement three new combat stats that add strategic depth to battles:
- Defense: Directly reduces incoming physical damage by N (min 1 damage)
- Accuracy: Hit chance = N * 10% (max 100%)
- Evasion: Reduces attacker's accuracy by N

Backend:
- Add defense/accuracy/evasion fields to Character (base: 0/10/0)
- Add defense/accuracy/evasion fields to Enemy with type-specific defaults
- Update StatBonuses struct to support new stat bonuses from items
- Implement hit chance calculation in combat system with RNG
- Implement damage reduction with defense stat
- Add get_total_defense/accuracy/evasion methods to GameState
- Update combat_attack to use new combat system with hit/miss mechanics
- Add rand crate dependency for RNG

Enemy stat defaults:
- Rabbit: DEF 0, ACC 8, EVA 2 (evasive)
- Fox: DEF 0, ACC 9, EVA 2
- Wolf: DEF 1, ACC 10, EVA 1 (balanced)
- Spider: DEF 0, ACC 9, EVA 3 (very evasive)
- Snake: DEF 0, ACC 11, EVA 2 (accurate)
- Lion: DEF 2, ACC 10, EVA 1 (tanky)
- Dragon: DEF 3, ACC 10, EVA 0 (very tanky)

Frontend:
- Add Defense, Accuracy, Evasion display to character stats sidebar
- Add bonus breakdowns for all stats (e.g., "10 (10 + 0)")
- Update combat view to show DEF/ACC/EVA for both combatants
- Update HTML to include new stat display elements

CLI:
- Update status command to display all new stats

All 16 E2E tests pass.

--- a/subsystems/mvp/static/index.html
+++ b/subsystems/mvp/static/index.html
@@ -75,6 +75,18 @@
                 <span class="stat-label">Attack</span>
                 <span class="stat-value" id="character-attack">-</span>
             </div>
+            <div class="stat-row">
+                <span class="stat-label">Defense</span>
+                <span class="stat-value" id="character-defense">-</span>
+            </div>
+            <div class="stat-row">
+                <span class="stat-label">Accuracy</span>
+                <span class="stat-value" id="character-accuracy">-</span>
+            </div>
+            <div class="stat-row">
+                <span class="stat-label">Evasion</span>
+                <span class="stat-value" id="character-evasion">-</span>
+            </div>
         </div>
 
         <div class="history-section">
