mvpWeb: add recipes API endpoint and frontend recipe viewer

--- a/subsystems/mvp/static/index.html
+++ b/subsystems/mvp/static/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
+    <!-- Recipe Viewer Button -->
+    <a href="/static/recipes.html" class="recipe-viewer-btn" title="View All Recipes" target="_blank">
+        <i class="ra ra-scroll-unfurled"></i>
+    </a>
     <div class="game-container">
         <div class="status-bar">
             <h2>Game Status</h2>
